Added a function to fetch current location of device data

--- a/style.css
+++ b/style.css
@@ -28,3 +28,11 @@
         display: flex;
         justify-content: center;
     }
+
+
+
+          .footer {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+          }
